Fix Lab02 + update project materials